Ajuste CSS en columnas

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,6 +28,21 @@ h1{
     margin: 50px;
 }
 
+#content {
+    background-color: maroon;
+    font-size: 0;
+    width: 500px;
+    height: 500px;
+    padding: 20px;
+ }
+ 
+ #left, #right {
+     display: inline-block;
+     box-sizing: border-box;
+     width: 45%;
+     height: 100%;
+ }
+
 #parrafo2{
 
 }
