--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 *{
     font-size: 14px;
     color: blue;
+    box-sizing: border-box;
 }
 
 
@@ -34,6 +35,7 @@ h1{
     width: 500px;
     height: 500px;
     padding: 20px;
+    margin-top: 20px;
  }
  
  #left, #right {
@@ -41,11 +43,7 @@ h1{
      box-sizing: border-box;
      width: 45%;
      height: 100%;
- }
-
-#parrafo2{
-
-}
+ }  
 
 #parrafo3{
 
@@ -54,3 +52,262 @@ h1{
 .clase{
     
 }
+
+#main-header {
+	background: #333;
+	color: white;
+	height: 80px;
+	width: 100%; /* hacemos que la cabecera ocupe el ancho completo de la página */
+	left: 0; /* Posicionamos la cabecera al lado izquierdo */
+	top: 0; /* Posicionamos la cabecera pegada arriba */
+	position: fixed; /* Hacemos que la cabecera tenga una posición fija */
+}
+
+
+
+#main-menu {
+	background: gray;
+	color: white;
+    margin-block-start: 80px;
+	height: 100%;/* hacemos que el menu ocupe el alto completo de la página */
+	width: 10%; 
+	left: 0; /* Posicionamos el menu al lado izquierdo */
+	top: 0; /* Posicionamos el menu pegado arriba */
+	position: fixed; /* Hacemos que el menu tenga una posición fija */
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    visibility: visible;
+    list-style-type: none;
+    text-align: center;
+}
+
+#main-menu a {
+    color: white;
+}
+
+#main-content header,
+#main-content .content {
+    padding: 40px;
+}
+
+#main-content {
+	background: white;
+	width: 90%;
+	max-width: 800px;
+	margin: 20px auto;
+	box-shadow: 0 0 10px rgba(0,0,0,.1);
+}
+#main-header {
+	background: #333;
+	color: white;
+	height: 80px;
+}	
+
+#main-header a {
+    color: white;
+}
+
+#main-content header,
+#main-content .content {
+    padding: 40px;
+}
+
+#logo{
+    width: 100px;
+    height: 100px;
+    align-items: center;
+}
+
+#logo-header {
+	float: left;
+	padding: 15px 0 0 20px;
+	text-decoration: none;
+}
+#logo-header:hover {
+    color: #0b76a6;
+}
+
+#logo-header .site-name {
+    display: block;
+    font-weight: 700;
+    font-size: 1.2em;
+    color: #fff;
+    text-align: center;
+}
+
+#logo-header .site-desc {
+    display: block;
+    font-weight: 300;
+    font-size: 0.8em;
+    color: #999;
+}
+
+nav {
+	float: right;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    padding-right: 20px;
+}
+
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+}
+
+nav ul li a {
+    display: block;
+    padding: 0 10px;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    background: #0b76a6;
+}
+
+/*login*/
+body {font-family: Arial, Helvetica, sans-serif;}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+#filas{
+
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 50%;
+  top: 0;
+  width: 50%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+}
+
+/*División de columnas*/
+
+
+  .column {
+    float: left;
+    width: 25%;
+    padding: 10px;
+    margin: 10px;
+    margin-block-start: 100px;
+    height: 300px; /* Should be removed. Only for demonstration */
+    background-color:#aaa;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
